[PE] Set GraphicsLayerUpdate bits on the enclosing stacking composited layer.

This ensures that we will paper over any confusions regarding non-stacking
composited layers such as as those created by backface-visibility: hidden.

Setting the bit on the enclosing stacking layer suffices because any
other composited layer must be a stacking child of it, and the
kGraphicsLayerUpdateSubtree is used.

Bug: 916077

Change-Id: I695f9b7a6700e1bed3bc55034916b200a1d7849e
Reviewed-on: https://chromium-review.googlesource.com/c/1394187
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619787}
Former-commit-id: 722a913a012145a221973945fd9411ad6444ccd2