third_party/blink/renderer/core/paint/compositing/compositing_inputs_updater.h
@@ -32,7 +32,8 @@ class CompositingInputsUpdater {
   };
 
   struct AncestorInfo {
-    PaintLayer* enclosing_composited_layer = nullptr;
+    // The ancestor composited PaintLayer which is also a stacking context.
+    PaintLayer* enclosing_stacking_composited_layer = nullptr;
     // A "squashing composited layer" is a PaintLayer that owns a squashing
     // layer. This variable stores the squashing composited layer for the
     // nearest PaintLayer ancestor which is squashed.
